# POV

./: README.md  pyproject.toml  tmp.py  todo
books/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_initial.py  0002_rename_owner_book_user.py  0003_alter_book_user.py  0003_book_created_at_book_updated_at.py  0004_alter_book_user.py  0004_book_rating.py  0005_alter_book_summary.py
config/: authentication.py  settings.py  urls.py
gptCreate/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
gptCreate/migrations/: 0001_initial.py  0002_remove_gptphoto_author_remove_gptphoto_content_and_more.py  0003_alter_gptphoto_file.py  0004_gptphoto_user_alter_gptphoto_book_and_more.py  0005_gpthashtag.py
gptSummary/: admin.py  apps.py  models.py  utils.py
gptSummary/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
liked/: admin.py  models.py  serializers.py
liked/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_remove_liked_books_remove_liked_movies_liked_books_and_more.py  0005_remove_liked_name_liked_payload.py  0006_rename_books_liked_book_rename_movies_liked_movie.py
medias/: admin.py  models.py  views.py
medias/migrations/: 0001_initial.py  0002_initial.py  0003_alter_photo_description.py  0003_alter_photo_file_alter_video_file.py
movies/: admin.py  models.py  serializers.py  urls.py  views.py
movies/migrations/: 0001_initial.py  0002_initial.py  0002_movie_is_public.py  (+4 more)
users/: admin.py  models.py  urls.py  views.py
(+4 files in other folders)
